Correct vertical spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -78,6 +78,8 @@ h1, h2 {
 
 #features h2 {
     font-size: 1.5rem;
+    margin-bottom: 60px;
+    margin-top: 25px;
 }
 
 #features span {
